添加hi_java_options命令 注明java版本要求